# lightweight-charts-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh  package-lock.json  package.json  pyproject.toml  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  question.yaml
.github/skills/lightweight-charts-python-api/: SKILL.md
.github/workflows/: build.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.md  polygon.md
docs/source/_ext/: styles.py
docs/source/_static/: funcs.js  ohlcv.json  pkg.js  splash.css
docs/source/_templates/: landing.html
docs/source/examples/: events.md  screenshot.md  subchart.md  table.md  toolbox.md  yfinance.md
docs/source/reference/: abstract_chart.md  charts.md  events.md  histogram.md  horizontal_line.md  index.md  line.md  pane.md  plugins.md  series.md  stream_chart.md  tables.md  toolbox.md  topbar.md  typing.md
docs/source/tutorials/: events.md  getting_started.md  plugins.md  stream_chart.md
examples/: README.md  area_series.py  attach_primitive.py  bands_indicator.py  data.csv  heatmap_orderbook.py  heatmap_series.py  last_price_animation.py  panes_api.py  positions.py  session_highlighting.py  stream_chart.py  tooltip_plugin.py  up_down_markers.py  version5_examples.py  volume_profile.py
examples/10_last_price_animation/: README.md
examples/11_session_highlighting/: README.md  session_highlighting.py
examples/12_tooltip_plugin/: README.md  tooltip_plugin.py
examples/13_bands_indicator/: README.md  bands_indicator.py
examples/14_volume_profile/: README.md  volume_profile.py
examples/15_heatmap_orderbook/: README.md
examples/16_positions/: README.md  data.csv  positions.py
examples/17_stream_chart/: README.md  stream_chart.py
examples/18_full_example/: README.md  full_example.py
examples/19_subcharts/: subcharts.py
examples/1_setting_data/: setting_data.py
examples/2_live_data/: live_data.py
examples/3_tick_data/: tick_data.py
examples/4_line_indicators/: line_indicators.py
examples/5_styling/: styling.py
examples/6_callbacks/: callbacks.py
examples/7_panes/: pane.py
examples/8_table/: table_example.py
examples/9_area_series/: README.md  area_series.py
examples/attach_primitive/: README.md  attach_primitive.py
examples/heatmap_orderbook/: README.md  heatmap_orderbook.py
examples/last_price_animation/: last_price_animation.py
examples/positions/: README.md
examples/tooltip_plugin/: README.md
examples/version5_examples/: README.md
examples/volume_profile/: README.md
lightweight_charts/: __init__.py  abstract.py  chart.py  drawings.py  plugins.py  polygon.py  stream.py  table.py  toolbox.py  topbar.py  util.py  widgets.py
lightweight_charts/js/: bundle.js  index.html  lightweight-charts.standalone.development.js  plugins.js  stream-shim.js  stream.html  styles.css
lightweight_charts/plugins/: __init__.py  bands.py  heatmap.py  position_tool.py  session_highlighting.py  tooltip.py  volume_profile.py
src/: index.ts  plugin-base.ts  sample-data.ts
src/bands-indicator/: bands-indicator.ts
src/box/: box.ts  pane-renderer.ts  pane-view.ts
src/context-menu/: color-picker.ts  style-picker.ts
src/drawing/: drawing-tool.ts  options.ts
src/example/: example.ts  index.html
src/general/: global-params.ts  handler.ts  index.ts  legend.ts  menu.ts  tab-bar.ts  table.ts  toolbox.ts  topbar.ts
src/heatmap-series/: data.ts  options.ts  renderer.ts
src/helpers/: canvas-rendering.ts  text-rendering.ts
src/horizontal-line/: axis-view.ts  horizontal-line.ts  pane-renderer.ts  pane-view.ts  ray-line.ts
src/partial-price-line/: partial-price-line.ts
src/position-tool/: position-tool.ts
src/tooltip/: tooltip.ts
src/trend-line/: pane-renderer.ts  pane-view.ts
src/vertical-line/: axis-view.ts  pane-renderer.ts  pane-view.ts  vertical-line.ts
src/volume-profile/: volume-profile.ts
test/: conftest.py  drawings.json  run_tests.py  test_bands_indicator.py  test_chart.py  test_drawing_labels.py  test_format_time.py  test_position_tool.py  test_returns.py  test_subcharts.py  test_table.py  test_toolbox.py  test_topbar.py  util.py
